--- a/index.html
+++ b/index.html
@@ -258,6 +258,32 @@
       });
     </script>
 
+    <script>
+      // Right-click disable
+      document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+      // DevTools detect
+      document.addEventListener("keydown", (e) => {
+        if (
+          e.ctrlKey &&
+          (e.key === "u" ||
+            e.key === "s" ||
+            e.key === "i" ||
+            e.key === "j" ||
+            e.key === "c")
+        ) {
+          e.preventDefault();
+        }
+      });
+
+      // Disable F12 & Inspect
+      document.addEventListener("keydown", (e) => {
+        if (e.key === "F12") {
+          e.preventDefault();
+        }
+      });
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
